# ankiconnect-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
examples/: add_note.rs  list_decks.rs  list_models.rs
old/src/: anki_card.rs  anki_connect_client.rs  anki_connect_request.rs  anki_search_query.rs  mod.rs  parameter_types.rs
old/tests/: anki_connect_client_test.rs
src/: anki_card.rs  anki_connect_client.rs  anki_connect_request.rs  error.rs  http.rs  lib.rs  parameter_types.rs  request_sender.rs  types.rs
src/builders/: mod.rs  note.rs  query.rs
src/client/: anki_client.rs  cards.rs  decks.rs  media.rs  mod.rs  models.rs  request.rs
src/models/: card.rs  deck.rs  media.rs  mod.rs  model.rs  note.rs
tests/: anki_connect_client_test.rs  card_client_test.rs  deck_client_test.rs  media_client_test.rs  model_client_test.rs  note_client_test.rs
