[package]
name = "ankiconnect-rs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for convenient interaction with AnkiConnect."
repository = "https://github.com/btrkeks/ankiconnect-rs.git"

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
ureq = "3.0.0-rc5"
serde_json = "1.0.135"

[dev-dependencies]
httpmock = "0.7.0-rc.1"