[package]
name = "ankiconnect-rs"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for convenient interaction with AnkiConnect."
repository = "https://github.com/btrkeks/ankiconnect-rs.git"

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
ureq = { version = "3.0.5", features = ["json"] }
serde_json = "1.0.135"
html-escape = "0.2.13"
anyhow = "1.0.97"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
